Bug 359713 -[user] OpenID login needs larger icons and/or more spacing

--- a/bundles/org.eclipse.orion.server.authentication.formopenid/web/css/loginWindow.css
+++ b/bundles/org.eclipse.orion.server.authentication.formopenid/web/css/loginWindow.css
@@ -179,8 +179,10 @@ td.loginWindowButtonTd {
 }
 
 img.loginWindow{
-	height: 20px;
+	height: 30px;
 	border: 0px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 table.loginWindow {
