--- a/bundles/org.eclipse.orion.server.authentication.formopenid/web/css/manageOpenids.css
+++ b/bundles/org.eclipse.orion.server.authentication.formopenid/web/css/manageOpenids.css
@@ -35,8 +35,10 @@ a:hover {
 }
 
 img.loginWindow{
-	height: 20px;
+	height: 30px;
 	border: 0px;
+	margin-left: 5px;
+	margin-right: 5px;
 }
 
 .secondaryColumn {
